Remove potential for infinite loops in AstronomicalEventsPlugin

AstronomicalEventsPlugin::loadEventsForDateRange would potentially go
into an infinite loop in case one of the arguments is an invalid date or
the end date is the last valid date. Add extra checks covering these
cases.

BUG: 434026